tests/fixtures/valid/expressions/color_literal.pine
//@version=6
indicator("Color lit")
c = #FF000080
plot(close, color = c)
