tests/fixtures/invalid/v6_migration/unsupported_version_5.pine
//@version=5
indicator("x")
plot(close)
